# QtAVPlayer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  qtav.cpp  qtav.h
QtAVPlayer/: CMakeLists.txt  qavaudioformat.h  qavaudioframe.h  qavaudiooutput.h  qavaudiooutputdevice.h  qavcodec_p.h  qavdemuxer.cpp  qavfilter_p.h  qavfilter_p_p.h  qavfiltergraph_p.h  qavfilters_p.h  qavframe.h  qavinoutfilter_p.h  qaviodevice.h  qavplayer.h  qavstream.h  qavstreamframe.h  qavsubtitleframe.h  qavvideobuffer_p.h  qavvideoframe.h
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  fontbar.cpp  fontbar.h  frameruler.h  main.cpp  mainwindow.h  pencil.h  pencil2d.h  pencilapplication.cpp  pencilapplication.h
app/color/: colordialog.h  colordictionary.h  colorwheel.h  colorwidget.h  colorwidgetaction.h
core/: CMakeLists.txt  core_global.h  log.cpp  log.h  miniz.h  pencilscene.h  pencilview.h  qminiz.h  transfrom.cpp  transfrom.h
core/util/: colordictionary.h  filetype.h  log.cpp  log.h  mathutils.h  movemode.h  pencildef.h  pencilerror.h  pencilsettings.h
menu/: menu.md
